log
Thu, Mar 27, 2025  5:11:45 PM: 
 tests:  0|6
total_score: 0/70
25021aa
Thu, Mar 27, 2025  5:14:25 PM: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
In file included from test.c:5:0:
list.c: In function 'createList':
list.c:33:9: error: expected identifier or '(' before '->' token
     List->head = NULL;
         ^~
list.c:34:9: error: expected identifier or '(' before '->' token
     List->tail-> NULL;
         ^~
list.c:35:5: error: 'list' undeclared (first use in this function)
     list->current = NULL;
     ^~~~
list.c:35:5: note: each undeclared identifier is reported only once for each function it appears in
list.c:36:12: error: expected expression before 'List'
     return List;
            ^~~~
list.c:32:11: error: unused variable 'new' [-Werror=unused-variable]
     List *new = (List*)malloc(sizeof(List));
           ^~~
list.c:37:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
8e7ba24
Thu, Mar 27, 2025  5:15:20 PM: 
 list.c | 8 ++++----
 1 file changed, 4 insertions(+), 4 deletions(-)
 tests:  1|5
total_score: 10/70
7a8e14b
Thu, Mar 27, 2025  5:16:48 PM: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  0|0
6565e38
Thu, Mar 27, 2025  5:18:53 PM: 
 list.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
In file included from test.c:5:0:
list.c: In function 'createList':
list.c:32:24: error: expected expression before ')' token
     List *list = (list*)malloc(sizeof(list));
                        ^
Compilation failed
8dae2f9
Thu, Mar 27, 2025  5:20:33 PM: 
 list.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
 tests:  0|0
4652dde
Thu, Mar 27, 2025  5:20:53 PM: 
 list.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
af7a905
Thu, Mar 27, 2025  5:22:31 PM: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
d23cd8c
Thu, Mar 27, 2025  5:24:15 PM: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
cf29a39
Thu, Mar 27, 2025  5:26:14 PM: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
4cdcf9a
Thu, Mar 27, 2025  5:27:21 PM: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
0de620e
Thu, Mar 27, 2025  5:31:44 PM: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  2|5
total_score: 15/70
fbce185
Thu, Mar 27, 2025  5:34:36 PM: 
 list.c | 6 ++++--
 1 file changed, 4 insertions(+), 2 deletions(-)
In file included from test.c:5:0:
list.c: In function 'nextList':
list.c:48:18: error: statement with no effect [-Werror=unused-value]
     list->current->data;
     ~~~~~~~~~~~~~^~~~~~
list.c:49:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
94247ad
Thu, Mar 27, 2025  5:39:41 PM: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:0:
list.c: In function 'nextList':
list.c:49:18: error: statement with no effect [-Werror=unused-value]
     list->current->data;
     ~~~~~~~~~~~~~^~~~~~
list.c:50:1: error: control reaches end of non-void function [-Werror=return-type]
 }
 ^
cc1.exe: all warnings being treated as errors
Compilation failed
4ae7667
